--- a/MVCLibrary/Views/Author/Index.cshtml
+++ b/MVCLibrary/Views/Author/Index.cshtml
@@ -54,7 +54,7 @@
             </td>
 
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = 1 }) |
+                <a href="Author/Edit/{{author.AuthorID}}">Edit</a>
                 <a ng-click="deleteAuthor(author.AuthorID)">Delete</a>
             </td>
         </tr>
